[gd_scene load_steps=5 format=2]

[ext_resource path="res://Neuron.gd" type="Script" id=1]
[ext_resource path="res://assets/circle.png" type="Texture" id=2]
[ext_resource path="res://assets/new.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 500.0

[node name="Neuron" type="Node2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CircleSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlusSprite" type="Sprite" parent="CircleSprite"]
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1, 1 )
texture = ExtResource( 3 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
